Fix: 모두 지우기 버튼 visibility

--- a/6주차/todolist/src/App.css
+++ b/6주차/todolist/src/App.css
@@ -88,6 +88,7 @@
     width: 595px;
     font-size: 8pt;
     margin-top: 10px;
+    visibility: hidden;
 }
 
 .delete_all:hover{
